Misc changes for better test results
Transform print statements to data structure add()
and print afterwards; add comment for JVM opts
analysis.